--- a/FYM_cli_vs_gui.html
+++ b/FYM_cli_vs_gui.html
@@ -154,7 +154,7 @@
         <!-- Introduction -->
         <section>
             <h2>Introduction</h2>
-            <p>Use the arrows below to explore the example interfaces of SPSS, RStudio, and Python.</p>
+            <p>Use the arrows below to explore the interface examples of SPSS, RStudio, and Python.</p>
         </section>
 
         <!-- Spacing Adjustment -->
@@ -252,6 +252,20 @@
                     </tr>
                 </tbody>
             </table>
+        </section>
+
+        <!-- Copilot Section -->
+        <section>
+            <h2>Copilot</h2>
+            <p>GitHub Copilot is an AI-powered coding assistant designed to help you write code faster and with fewer errors. Here's how you can set it up:</p>
+            <ol>
+                <li><strong>Step 1:</strong> Creat a Github account and connect it to a Two-factor authentication. Set up your personal profile. For an example, see <a href="https://github.com/Nefertary-Li" target="_blank">Nefer's GitHub Profile</a>.</li>
+                <li><strong>Step 2:</strong> Visit the <a href="https://docs.github.com/en/education/about-github-education/github-education-for-students/apply-to-github-education-as-a-student" target="_blank">GitHub Education page</a> and follow the provided instructions to apply as a student.</li>
+                <li><strong>Step 3:</strong> Once verified, navigate to the "GitHub Copilot" section to activate it for free!
+		<li><strong>Step 4:</strong> Enable GitHub Copilot in RStudio. Tools - Global Option - Copilot - Enable and sign in, as shown below:</li>
+            </ol>
+ 	 <img src="https://raw.githubusercontent.com/Nefertary-Li/free_your_method_programming/refs/heads/main/Screenshot%202025-05-07%20205331.png" alt="GitHub Copilot Settings in RStudio" style="display: block; margin: 20px auto; max-width: 100%; border: 1px solid #ddd; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+            <p>Now you are ready to go! With Copilot, you can unlock new possibilities in coding and elevate your programming skills effortlessly.</p>
         </section>
     </main>
 
